# somanylemons-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: outreach_flow.py  quickstart.py
src/somanylemons/: __init__.py  client.py  errors.py  http.py
src/somanylemons/models/: __init__.py  brands.py  drafts.py  image_quote.py  jobs.py  reels.py  templates.py  usage.py
src/somanylemons/resources/: __init__.py  brands.py  content.py  drafts.py  image_quote.py  jobs.py  reels.py  templates.py  transcribe.py  upload.py  usage.py
tests/: test_client.py
