[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "somanylemons"
version = "0.1.2"
description = "Python SDK for the SoManyLemons Public API — branded video reels, LinkedIn content, image quotes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SoManyLemons", email = "support@somanylemons.com" }]
keywords = ["somanylemons", "sml", "video", "linkedin", "content-marketing", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://somanylemons.com"
Documentation = "https://api.somanylemons.com/api/v1/docs/"
Repository = "https://github.com/NoMiddleInc/somanylemons-sdk"
Issues = "https://github.com/NoMiddleInc/somanylemons-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/somanylemons"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
